hphp/test/zend/good/Zend/tests/call_static_004.php.expectf
string(3) "AaA"

Fatal error: Function name must be a string in %s/call_static_004.php on line 12
